#pragma once

#include <string>
#include <ctime>
#include <sstream>
#include <iomanip>

class TimeUtils
{
public:
    static std::string getCurrentTime();
};